Message order is now correct and more performant Fixed a bunch of minor bugs Adding stuff to the Kotlin client example